# cpp-opengl-gtest-starter

./: CMakeLists.txt  README.md  conanfile.txt
scripts/: build.sh  test.sh
src/: main.cpp
test/: CMakeLists.txt  exampletest.cpp
